--- a/ProjectManagement/Pages/Shared/_Layout.cshtml
+++ b/ProjectManagement/Pages/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/ProjectManagement.styles.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
 <header>
@@ -39,7 +40,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Index">Teams</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Users</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Users/Index">Users</a>
                             </li>
                         } else if (User.IsInRole(Roles.Manager.ToString()))
                         {
