Add teams url to navbar

--- a/ProjectManagement/Pages/Shared/_Layout.cshtml
+++ b/ProjectManagement/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Index">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Teams</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Teams/Index">Teams</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Users/Index">Users</a>
@@ -48,7 +48,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Index">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Teams</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Teams/Index">Teams</a>
                             </li>
                         }
                         else
