--- a/ProjectManagement/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ProjectManagement/Areas/Identity/Pages/Account/Register.cshtml
@@ -21,6 +21,11 @@
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
+                <input asp-for="Input.UserName" class="form-control" aria-required="true" placeholder="ivoivic"/>
+                <label asp-for="Input.UserName">Username</label>
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com"/>
                 <label asp-for="Input.Email">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
