Add create new team button

--- a/ProjectManagement/Pages/Teams/Index.cshtml
+++ b/ProjectManagement/Pages/Teams/Index.cshtml
@@ -21,6 +21,11 @@
     </div>
 </form>
 
+<a asp-page="/Teams/Create" class="btn btn-success mt-2">
+    <i class="bi bi-plus"></i>
+    Create new team
+</a>
+
 <div class="table-responsive">
     <table class="table table-striped">
         <thead>
