--- a/ProjectManagement/Pages/Teams/Index.cshtml
+++ b/ProjectManagement/Pages/Teams/Index.cshtml
@@ -41,22 +41,28 @@
             {
                 <tr>
                     <td class="align-middle">@team.Name</td>
+                    @* @if(team.Members.Count > 0) *@
+                    @* { *@
+                    @*     <td class="align-middle"> *@
+                    @*         @foreach (var member in team.Members) *@
+                    @*         { *@
+                    @*             <p>@member.FirstName @member.LastName</p> *@
+                    @*         } *@
+                    @*     </td> *@
+                    @* } *@
                     @if(team.Members.Count > 0)
                     {
-                        <td class="align-middle">
-                            @foreach (var member in team.Members)
-                            {
-                                <p>@member.FirstName @member.LastName</p>
-                            }
-                        </td>
+                    <td class="align-middle">
+                        <p class="align-middle mb-0">@team.Members.Count Members</p>
+                    </td>
                     }
                     else {
                         <td class="align-middle">No members</td>
                     }
                     <td class="align-middle">
                         <a asp-page="/Teams/Details" asp-route-id="@team.Id" class="btn btn-primary">
-                            <i class="bi bi-eye"></i>
-                            Details
+                            <i class="bi bi-person"></i>
+                            Members
                         </a>
                         @if (User.IsInRole("Admin"))
                         {
