Display member of team

--- a/ProjectManagement/Pages/Teams/Index.cshtml
+++ b/ProjectManagement/Pages/Teams/Index.cshtml
@@ -60,7 +60,7 @@
                         <td class="align-middle">No members</td>
                     }
                     <td class="align-middle">
-                        <a asp-page="/Teams/Details" asp-route-id="@team.Id" class="btn btn-primary">
+                        <a asp-page="/Teams/Members" asp-route-id="@team.Id" class="btn btn-primary">
                             <i class="bi bi-person"></i>
                             Members
                         </a>
