Add cancel button to teams and users delete page

--- a/ProjectManagement/Pages/Teams/Delete.cshtml
+++ b/ProjectManagement/Pages/Teams/Delete.cshtml
@@ -19,3 +19,7 @@
         <button class="w-100 btn btn-lg btn-danger" type="submit">Delete team @Model.Name</button>
     </form>
 </div>
+
+<a asp-page="/Teams/Index" class="btn btn-primary mt-4">
+    Cancel
+</a>
