--- a/ProjectManagement/Pages/Teams/Members.cshtml
+++ b/ProjectManagement/Pages/Teams/Members.cshtml
@@ -12,9 +12,10 @@
 
 @if (Model.Team.Members.Count > 0)
 {
-    <form asp-action="OnGetAsync" method="get" class="">
+    <form asp-action="OnGetAsync" method="get">
         <div class="row">
             <div class="input-group">
+                <input type="hidden" name="id" value="@Model.Team.Id" class="w-auto"/>
                 <input type="search" class="form-control" placeholder="Search..." name="searchString" value="@keyword">
                 <button type="submit" class="btn btn-primary mr-2"><i class="bi bi-search"></i></button>
                 <a asp-action="" class="btn btn-secondary clear-btn">Clear</a>
