--- a/ProjectManagement/Pages/Shared/_Layout.cshtml
+++ b/ProjectManagement/Pages/Shared/_Layout.cshtml
@@ -42,25 +42,31 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Users/Index">Users</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Tasks/Index">Tasks</a>
+                            </li>
                         } else if (User.IsInRole(Roles.Manager.ToString()))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Projects</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Projects/Index">My Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Teams/Index">Teams</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Teams/Index">My Teams</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Tasks/Index">My Tasks</a>
                             </li>
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">My Projects</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Projects/Index">My Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">My Tasks</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Teams/Index">My Teams</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">My Teams</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Tasks/Index">My Tasks</a>
                             </li>
                         }
                     }
