--- a/ProjectManagement/Pages/Teams/Edit.cshtml
+++ b/ProjectManagement/Pages/Teams/Edit.cshtml
@@ -1,4 +1,6 @@
 ﻿@page
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using ProjectManagement.Entities.Enums
 @model ProjectManagement.Pages.Teams.Edit
 
 @{
@@ -16,6 +18,21 @@
                 <label asp-for="Input.Name"></label>
                 <span asp-validation-for="Input.Name" class="text-danger"></span>
             </div>
+
+            @if (User.IsInRole(Roles.Admin.ToString()))
+            {
+            <select asp-for="Input.OwnerId" class="form-control w-auto">
+                <option value="" selected disabled>Please select user</option>
+                @foreach (var userOption in Model.ManagerOptions)
+                {
+                <option value="@userOption.Id" selected="@(userOption.Id == Model.Input.OwnerId ? "selected" : null)">
+                    @userOption.FirstName @userOption.LastName (@userOption.Email)
+                </option>
+                }
+            </select>
+
+            <span asp-validation-for="Input.OwnerId" class="text-danger"></span>
+            }
         </div>
     </div>
     <button id="update-team-button" type="submit" class="w-auto btn btn-lg btn-warning mt-3">Update</button>
