--- a/ProjectManagement/Pages/Teams/Index.cshtml
+++ b/ProjectManagement/Pages/Teams/Index.cshtml
@@ -32,6 +32,7 @@
         <tr>
             <th scope="col">Name</th>
             <th scope="col">Members</th>
+            <th scope="col">Owner</th>
         </tr>
         </thead>
         <tbody>
@@ -48,6 +49,9 @@
                 else {
                     <td class="align-middle">No members</td>
                 }
+                <td class="align-middle">
+                    <p class="align-middle mb-0">@team.Owner.Email</p>
+                </td>
                 <td class="align-middle">
                     <a asp-page="/Teams/Members" asp-route-id="@team.Id" class="btn btn-primary">
                         <i class="bi bi-person"></i>
