--- a/ProjectManagement/Pages/Teams/Index.cshtml
+++ b/ProjectManagement/Pages/Teams/Index.cshtml
@@ -52,20 +52,36 @@
                 <td class="align-middle">
                     <p class="align-middle mb-0">@team.Owner.Email</p>
                 </td>
-                <td class="align-middle">
-                    <a asp-page="/Teams/Members" asp-route-id="@team.Id" class="btn btn-primary">
-                        <i class="bi bi-person"></i>
-                        Members
-                    </a>
-                    <a asp-page="/Teams/Edit" asp-route-id="@team.Id" class="btn btn-warning">
-                        <i class="bi bi-pen"></i>
-                        Edit
-                    </a>
-                    <a asp-page="/Teams/Delete" asp-route-id="@team.Id" class="btn btn-danger">
-                        <i class="bi bi-trash3"></i>
-                        Delete
-                    </a>
-                </td>
+                @if (User.IsInRole(Roles.Admin.ToString()) || User.IsInRole(Roles.Manager.ToString()))
+                {
+                    <td class="align-middle">
+                        <a asp-page="/Teams/Members" asp-route-id="@team.Id" class="btn btn-primary">
+                            <i class="bi bi-person"></i>
+                            Members
+                        </a>
+                        <a asp-page="/Teams/Edit" asp-route-id="@team.Id" class="btn btn-warning">
+                            <i class="bi bi-pen"></i>
+                            Edit
+                        </a>
+                        <a asp-page="/Teams/Delete" asp-route-id="@team.Id" class="btn btn-danger">
+                            <i class="bi bi-trash3"></i>
+                            Delete
+                        </a>
+                    </td>
+                }
+                else
+                {
+                    <td class="align-middle">
+                        <form asp-page-handler="LeaveTeam" method="post" class="w-auto">
+                            <input type="hidden" name="userId" value="@Model.CurrentUser.Id" />
+                            <input type="hidden" name="teamId" value="@team.Id" />
+                            <button class="btn btn-danger w-auto">
+                                <i class="bi bi-door-open"></i>
+                                Leave team
+                            </button>
+                        </form>
+                    </td>
+                }
             </tr>
         }
         </tbody>
